--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+			integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,6 +29,15 @@
 
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
-    -->
+		-->
+
+		<!-- Github ribbon -->
+		<div class="github-ribbon">
+			<a href="https://github.com/nickhericks/react-router-course-directory" target="_blank">
+				<i class="fab fa-github"></i>
+				<span>View on GitHub</span>
+			</a>
+		</div>
+
   </body>
 </html>
